// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpenseListItem with expense 1`] = `
<Link
  className="list-item"
  replace={false}
  to="/edit/1"
>
  <div>
    <h3
      className="list-item__title"
    >
      rent
    </h3>
    <span
      className="list-item__sub-title"
    >
      1970/01/01 08:00:00
    </span>
  </div>
  <h3
    className="list-item__data"
  >
    TWD 
    $1,000
  </h3>
</Link>
`;

exports[`should render ExpenseListItem with expense 2`] = `
<Link
  className="list-item"
  replace={false}
  to="/edit/2"
>
  <div>
    <h3
      className="list-item__title"
    >
      coffee
    </h3>
    <span
      className="list-item__sub-title"
    >
      1969/12/29 08:00:00
    </span>
  </div>
  <h3
    className="list-item__data"
  >
    TWD 
    $5,000
  </h3>
</Link>
`;

exports[`should render ExpenseListItem with expense 3`] = `
<Link
  className="list-item"
  replace={false}
  to="/edit/3"
>
  <div>
    <h3
      className="list-item__title"
    >
      dinner
    </h3>
    <span
      className="list-item__sub-title"
    >
      1970/01/04 08:00:00
    </span>
  </div>
  <h3
    className="list-item__data"
  >
    TWD 
    $3,000
  </h3>
</Link>
`;
